added list of steps

--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -9,7 +9,7 @@
 <body>
     <h1>Lasagna</h1>
     <img src="../images/lasagna.jpeg" alt="picture of lasagna">
-    <h3>World's Best Lasagna</h3>
+    <h3>Description</h3>
     <p>Having grown up in a family of excellent Italian cooks, I admit I am a "tough room" when it comes to Italian recipes.
         Despite that, this one is so good that I am sure my mother and grandmother are smiling down from heaven in approval!
         I saw this same recipe on another site and it only called for 1 teaspoon of salt, not 1 tablespoon. It came out perfect with the lower amount of salt.
@@ -21,6 +21,7 @@
          And finally (and this is very important), make the sauce the night before and leave it in the fridge overnight.
          The sauce tastes better and better as it sits and develops more richness of body and flavor.
          Trust me, all of these changes will improve the recipe! Mangia!</p>
+        <h4>Ingredients</h4>
          <ul>
              <li>1 pound sweet Italian sausage</li>
              <li>¾ pound lean ground beef</li>
@@ -43,5 +44,19 @@
              <li>¾ pound mozzarella cheese, sliced</li>
              <li>¾ cup grated Parmesan cheese</li>
          </ul>
+         <h4>Steps</h4>
+         <ol>
+             <li>In a Dutch oven, cook sausage, ground beef, onion, and garlic over medium heat until well browned.
+             Stir in crushed tomatoes, tomato paste, tomato sauce, and water. Season with sugar, basil, fennel seeds, Italian seasoning, 1 teaspoon salt, pepper,
+             and 2 tablespoons parsley.Simmer, covered, for about 1 1/2 hours, stirring occasionally.</li>
+             <li>Bring a large pot of lightly salted water to a boil. Cook lasagna noodles in boiling water for 8 to 10 minutes.
+             Drain noodles, and rinse with cold water.In a mixing bowl, combine ricotta cheese with egg, remaining parsley, and 1/2 teaspoon salt.</li>
+             <li>Preheat oven to 375 degrees F (190 degrees C).</li>
+             <li>To assemble, spread 1 1/2 cups of meat sauce in the bottom of a 9x13-inch baking dish. Arrange 6 noodles lengthwise over meat sauce.
+             Spread with one half of the ricotta cheese mixture. Top with a third of mozzarella cheese slices.
+             Spoon 1 1/2 cups meat sauce over mozzarella, and sprinkle with 1/4 cup Parmesan cheese. Repeat layers, and top with remaining mozzarella and Parmesan cheese.
+             Cover with foil: to prevent sticking, either spray foil with cooking spray, or make sure the foil does not touch the cheese.</li>
+             <li>Bake in preheated oven for 25 minutes. Remove foil, and bake an additional 25 minutes. Cool for 15 minutes before serving.</li>
+         </ol>
 </body>
 </html>
