added ingredients and steps to taco seasoning

--- a/recipes/taco-seasoning.html
+++ b/recipes/taco-seasoning.html
@@ -7,6 +7,28 @@
     <title>Taco Seasoning</title>
 </head>
 <body>
-    
+    <h1>Taco Seasoning</h1>
+    <img src="../images/taco seasoning.jpeg" alt="picture of a bowl of taco seasoning">
+    <h3>Description</h3>
+    <p>This recipe was a life-saver!! After already mixing ingrediants for "seven layer taco dip," I realized that I was out of taco seasoning.
+     Frantic, I ran to the computer and found this! YEAH!! I mixed it in with some cream cheese and sour cream to taste it first and it was great.
+     Worked even better in the dip!! If I'd had known how easy this was, I would have been making my own taco seasoning for a while now!!
+     The only thing I changed was reduced the chili powder to 1/2 TBSP.Very good and will make again!! Thanks Bill for posting this!</p>
+     <h4>Ingredients</h4>
+     <ul>
+         <li>1 tablespoon chili powder</li>
+         <li>1 ½ teaspoons ground cumin</li>
+         <li>1 teaspoon sea salt</li>
+         <li>1 teaspoon ground black pepper</li>
+         <li>½ teaspoon ground paprika</li>
+         <li>¼ teaspoon garlic powder</li>
+         <li>¼ teaspoon onion powder</li>
+         <li>¼ teaspoon crushed red pepper flakes</li>
+         <li>¼ teaspoon dried oregano</li>
+     </ul>
+     <h4>Steps</h4>
+     <ol>
+         <li>Mix together chili powder, cumin, salt, pepper, paprika, garlic powder, onion powder, red pepper flakes, and oregano in a small bowl.</li>
+     </ol>
 </body>
 </html>
