changed lasagna.html title and added waffles.html to recipes list

--- a/index.html
+++ b/index.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Recipe List</title>
 </head>
 <body>
     <h1>Odin Recipes</h1>
     <ul>
     <li><a href="recipes/lasagna.html">Lasagna</a></li>
     <li><a href="recipes/taco-seasoning.html">Taco seasoning</a></li>
-    <li><a href=""></a></li>
+    <li><a href="recipes/waffles.html">Waffles</a></li>
     </ul>
 </body>
 </html>
